# mistralOCR

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
src/: __init__.py  config.py  gui.py  main.py  ocr.py
