[tool.poetry]
name = "mistralocr"
version = "0.1.0"
description = ""
authors = ["andy"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mistralai = "^1.5.1"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
